2002-01-22  Paul Eggert  <eggert@twinsun.com>

	* jm-macros.m4 (jm_MACROS): Require AC_FUNC_FSEEKO.

2002-01-19  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Use AC_FUNC_STRNLEN.
	Remove useless quotes: DF_PROG="df".
	* strnlen.m4: New file.

2001-12-14  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Check for iswspace.
	Suggestion from Bruno Haible.

2001-11-20  Jim Meyering  <meyering@lucent.com>

	* mkstemp.m4 (UTILS_FUNC_MKSTEMP): Update comment to reflect that
	SunOS4.1.4 and solaris2.5.1 lose, too.

2001-11-19  Jim Meyering  <meyering@lucent.com>

	* mkstemp.m4 (UTILS_FUNC_MKSTEMP): Don't bother with a temporary
	directory.  Use "conftestXXXXXX" as the template.
	Suggestion from Paul Eggert.

	* mkstemp.m4 (UTILS_FUNC_MKSTEMP): Close each descriptor immediately,
	so the test doesn't mistakenly hit the max-open-files limit.

2001-11-18  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ_TEMPNAME): Check for declaration of getenv.

2001-11-17  Jim Meyering  <meyering@lucent.com>

	* mkstemp.m4 (UTILS_FUNC_MKSTEMP): New file and macro.
	Prompted by a report from Bob Proulx.

	* jm-macros.m4 (jm_MACROS): Don't test for mkstemp here.
	Instead, require UTILS_FUNC_MKSTEMP.

2001-11-11  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Remove code to set POW_LIBM.
	Now, that's done as part of AC_FUNC_STRTOD.

2001-10-22  Paul Eggert  <eggert@twinsun.com>

	* jm-winsz1.m4 (jm_WINSIZE_IN_PTEM): Do not define
	WINSIZE_IN_PTEM if <termios.h> defines struct winsize.

2001-11-10  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ_PHYSMEM): New function.
	(jm_PREREQ): Use it.

2001-11-09  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4: Require autoconf-2.52f.
	(AC_FUNC_ERROR_AT_LINE, AC_FUNC_OBSTACK, AC_FUNC_STRTOD):
	Use these AC_-prefixed names, not the AM_-prefixed ones.

	* afs.m4 (jm_AFS): Quote the body.  Patch by Akim Demaille.

2001-11-04  Jim Meyering  <meyering@lucent.com>
